# wardle-rs

./: Cargo.toml  README.md
src/: main.rs
static/: opensearch.xml
