[package]
name = "wardle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.3.1", features = ["rustls"] }
env_logger = "0.10.0"
log = "0.4.19"
rand = "0.8.5"
serde = { version = "1.0.171", features = ["serde_derive"] }
